--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 2.2
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore src/
     - name: Build
       run: dotnet build src/ --configuration Release --no-restore
     - name: Test
