--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build src/ --configuration Release --no-restore
     - name: Test
-      run: dotnet test src/ --no-restore --verbosity normal
+      run: dotnet test src/ --no-restore
