--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -13,12 +13,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1.5.0
         with:
           dotnet-version: 2.2
+      
+      - name: Checkout
+        uses: actions/checkout@v2
     
       - name: Install dependencies
         run: dotnet restore src/
@@ -41,8 +42,10 @@ jobs:
       - name: Install semantic-release dependencies
         run: npm install -g semantic-release@17 @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/git @semantic-release/changelog @semantic-release/exec conventional-changelog-conventionalcommits
       
+      - name: Checkout
+        uses: actions/checkout@v2
+      
       - name: Run semantic-release
-      - uses: actions/checkout@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
