change release branches

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,4 +1,8 @@
 {
+  "branches": [
+    {"name": "release"},
+    {"name": "beta", "prerelease": true}
+  ],
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
