--- a/src/Tochka.JsonRpc.Server/Tochka.JsonRpc.Server.csproj
+++ b/src/Tochka.JsonRpc.Server/Tochka.JsonRpc.Server.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Company>Tochka</Company>
-    <Description>JSON RPC integration into ASP.NET Core</Description>
+    <Description>JSON RPC 2.0 integration into ASP.NET Core</Description>
     <Copyright>Tochka</Copyright>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
