--- a/src/Tochka.JsonRpc.Server/Tochka.JsonRpc.Server.csproj
+++ b/src/Tochka.JsonRpc.Server/Tochka.JsonRpc.Server.csproj
@@ -11,6 +11,7 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <LangVersion>7.1</LangVersion>
+    <PackageProjectUrl>https://tochka-public.github.io/Tochka.JsonRpc</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
