--- a/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
+++ b/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
@@ -10,6 +10,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://tochka-public.github.io/Tochka.JsonRpc</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
