--- a/src/Tochka.JsonRpc.Server/Tochka.JsonRpc.Server.csproj
+++ b/src/Tochka.JsonRpc.Server/Tochka.JsonRpc.Server.csproj
@@ -12,6 +12,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <LangVersion>7.1</LangVersion>
     <PackageProjectUrl>https://tochka-public.github.io/Tochka.JsonRpc</PackageProjectUrl>
+    <Authors>Tochka</Authors>
+    <Product>Tochka.JsonRpc</Product>
   </PropertyGroup>
 
   <ItemGroup>
