fix for cache action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
+
+      - name: Cache node_modules
+        uses: c-hive/gha-npm-cache@v1
       
       - name: Install semantic-release dependencies
-        uses: c-hive/gha-npm-cache@v1
         run: npm install -g semantic-release@17 @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/git @semantic-release/changelog @semantic-release/exec conventional-changelog-conventionalcommits
       
       - name: Run semantic-release
