ci: fix .releaserc

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,6 +1,6 @@
 {
   "branches": [
-    {"name": "release"},
+    {"name": "master"},
     {"name": "beta", "prerelease": true}
   ],
   "plugins": [
