--- a/src/WebApplication1/WebApplication1.csproj
+++ b/src/WebApplication1/WebApplication1.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\vault\tochka\Tochka.JsonRpc\src\WebApplication1\WebApplication1.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
