--- a/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
+++ b/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
@@ -17,6 +17,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\vault\tochka\Tochka.JsonRpc\src\Tochka.JsonRpc.Common\Tochka.JsonRpc.Common.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
