--- a/src/WebApplication1/WebApplication1.csproj
+++ b/src/WebApplication1/WebApplication1.csproj
@@ -13,12 +13,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tochka.JsonRpc.OpenRpc\Tochka.JsonRpc.OpenRpc.csproj" />
     <ProjectReference Include="..\Tochka.JsonRpc.Server\Tochka.JsonRpc.Server.csproj" />
+    <ProjectReference Include="..\Tochka.JsonRpc.Swagger\Tochka.JsonRpc.Swagger.csproj" />
   </ItemGroup>
 
 </Project>
