--- a/src/Tochka.JsonRpc.ApiExplorer/Tochka.JsonRpc.ApiExplorer.csproj
+++ b/src/Tochka.JsonRpc.ApiExplorer/Tochka.JsonRpc.ApiExplorer.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Namotion.Reflection" Version="1.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Tochka.JsonRpc.Server\Tochka.JsonRpc.Server.csproj" />
   </ItemGroup>
 
