--- a/src/Tochka.JsonRpc.ApiExplorer/Tochka.JsonRpc.ApiExplorer.csproj
+++ b/src/Tochka.JsonRpc.ApiExplorer/Tochka.JsonRpc.ApiExplorer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Company>Tochka</Company>
     <Description>Compatibility layer for OpenAPI/Swagger/OpenRPC support</Description>
     <Copyright>Tochka</Copyright>
