--- a/src/Tochka.JsonRpc.Swagger/Tochka.JsonRpc.Swagger.csproj
+++ b/src/Tochka.JsonRpc.Swagger/Tochka.JsonRpc.Swagger.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Company>Tochka</Company>
     <Description>Swagger document generator</Description>
     <Copyright>Tochka</Copyright>
