--- a/src/tests/Tochka.JsonRpc.Client.Tests/Tochka.JsonRpc.Client.Tests.csproj
+++ b/src/tests/Tochka.JsonRpc.Client.Tests/Tochka.JsonRpc.Client.Tests.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
