--- a/src/WebAppWIthJsonRpcRouter/Properties/launchSettings.json
+++ b/src/WebAppWIthJsonRpcRouter/Properties/launchSettings.json
@@ -3,15 +3,15 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:47008",
-      "sslPort": 44370
+      "applicationUrl": "http://localhost:9846",
+      "sslPort": 44313
     }
   },
   "profiles": {
-    "WebAppWithJsonRpcServer": {
+    "WebAppWIthJsonRpcRouter": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7213;http://localhost:5213",
+      "applicationUrl": "https://localhost:7041;http://localhost:5041",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
