--- a/src/tests/Tochka.JsonRpc.Client.Tests.WebApplication/Tochka.JsonRpc.Client.Tests.WebApplication.csproj
+++ b/src/tests/Tochka.JsonRpc.Client.Tests.WebApplication/Tochka.JsonRpc.Client.Tests.WebApplication.csproj
@@ -11,8 +11,16 @@
       <_Parameter1>Tochka.JsonRpc.Client.Tests.Integration</_Parameter1>
     </AssemblyAttribute>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Tochka.JsonRpc.Server.Tests.Integration</_Parameter1>
+    </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
     </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\v1\Tochka.JsonRpc.V1.Server\Tochka.JsonRpc.V1.Server.csproj" />
+    <ProjectReference Include="..\Tochka.JsonRpc.TestUtils.Integration\Tochka.JsonRpc.TestUtils.Integration.csproj" />
   </ItemGroup>
 
 </Project>
