test(client): add deserialization test cases

--- a/src/tests/Tochka.JsonRpc.TestUtils.Integration/Tochka.JsonRpc.TestUtils.Integration.csproj
+++ b/src/tests/Tochka.JsonRpc.TestUtils.Integration/Tochka.JsonRpc.TestUtils.Integration.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="NUnit" Version="3.13.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Tochka.JsonRpc.TestUtils\Tochka.JsonRpc.TestUtils.csproj" />
+    </ItemGroup>
+
 </Project>
