refactor(v2): use english everywhere

--- a/src/tests/.editorconfig
+++ b/src/tests/.editorconfig
@@ -1,12 +1,3 @@
-##########################################
-##########################################
-# Скопируйте в папку tests.
-# (подробности см. в документации)
-#
-# По умолчанию этот файл отключает некоторые строгие проверки, потому что они мешаются в тестах
-##########################################
-##########################################
-
 [*.{cs,csx,cake,razor}]
 # allow Test_Foo_Bar method names (with underscores)
 dotnet_diagnostic.CA1707.severity = none
@@ -28,5 +19,5 @@ dotnet_diagnostic.CA1001.severity = none
 
 ##########################################
 ##########################################
-# ... дописывайте кастомные настройки здесь ...
+# ... Add your custom settings here ...
 resharper_keep_existing_initializer_arrangement = true
