--- a/src/tests/RoutingTests/RoutingTests.csproj
+++ b/src/tests/RoutingTests/RoutingTests.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Tochka.JsonRpc.Server\Tochka.JsonRpc.Server.csproj" />
+      <ProjectReference Include="..\Tochka.JsonRpc.TestUtils\Tochka.JsonRpc.TestUtils.csproj" />
     </ItemGroup>
 
 </Project>
