--- a/src/tests/Tochka.JsonRpc.Client.Tests.Integration/Tochka.JsonRpc.Client.Tests.Integration.csproj
+++ b/src/tests/Tochka.JsonRpc.Client.Tests.Integration/Tochka.JsonRpc.Client.Tests.Integration.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Tochka.JsonRpc.Client\Tochka.JsonRpc.Client.csproj" />
-    <ProjectReference Include="..\Tochka.JsonRpc.Client.Tests.WebApplication\Tochka.JsonRpc.Client.Tests.WebApplication.csproj" />
+    <ProjectReference Include="..\Tochka.JsonRpc.Tests.WebApplication\Tochka.JsonRpc.Tests.WebApplication.csproj" />
     <ProjectReference Include="..\Tochka.JsonRpc.TestUtils.Integration\Tochka.JsonRpc.TestUtils.Integration.csproj" />
   </ItemGroup>
 
