--- a/src/tests/Tochka.JsonRpc.Server.Tests.Integration/Tochka.JsonRpc.Server.Tests.Integration.csproj
+++ b/src/tests/Tochka.JsonRpc.Server.Tests.Integration/Tochka.JsonRpc.Server.Tests.Integration.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tochka.JsonRpc.Client.Tests.WebApplication\Tochka.JsonRpc.Client.Tests.WebApplication.csproj" />
+    <ProjectReference Include="..\Tochka.JsonRpc.Tests.WebApplication\Tochka.JsonRpc.Tests.WebApplication.csproj" />
     <ProjectReference Include="..\Tochka.JsonRpc.TestUtils.Integration\Tochka.JsonRpc.TestUtils.Integration.csproj" />
   </ItemGroup>
 
