--- a/src/Tochka.JsonRpc.OpenRpc/Tochka.JsonRpc.OpenRpc.csproj
+++ b/src/Tochka.JsonRpc.OpenRpc/Tochka.JsonRpc.OpenRpc.csproj
@@ -12,6 +12,8 @@
 
     <ItemGroup>
       <PackageReference Include="JsonSchema.Net" Version="4.1.1" />
+      <PackageReference Include="JsonSchema.Net.Generation" Version="3.2.0" />
+      <PackageReference Include="Namotion.Reflection" Version="2.1.2" />
       <PackageReference Include="Yoh.Text.Json.NamingPolicies" Version="1.0.0" />
     </ItemGroup>
 
