--- a/src/tests/Tochka.JsonRpc.Common.Tests/Tochka.JsonRpc.Common.Tests.csproj
+++ b/src/tests/Tochka.JsonRpc.Common.Tests/Tochka.JsonRpc.Common.Tests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
