--- a/src/benchmarks/Tochka.JsonRpc.Benchmarks.NewWebApp/Tochka.JsonRpc.Benchmarks.NewWebApp.csproj
+++ b/src/benchmarks/Tochka.JsonRpc.Benchmarks.NewWebApp/Tochka.JsonRpc.Benchmarks.NewWebApp.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\tests\Tochka.JsonRpc.TestUtils\Tochka.JsonRpc.TestUtils.csproj" />
+    <ProjectReference Include="..\..\Tochka.JsonRpc.Server\Tochka.JsonRpc.Server.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Tochka.JsonRpc.Benchmarks</_Parameter1>
     </AssemblyAttribute>
@@ -16,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EdjCase.JsonRpc.Router" Version="5.1.9" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.2" />
   </ItemGroup>
 
