--- a/src/tests/Tochka.JsonRpc.OpenRpc.Tests/Tochka.JsonRpc.OpenRpc.Tests.csproj
+++ b/src/tests/Tochka.JsonRpc.OpenRpc.Tests/Tochka.JsonRpc.OpenRpc.Tests.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Tochka.JsonRpc.OpenRpc\Tochka.JsonRpc.OpenRpc.csproj" />
+    <ProjectReference Include="..\Tochka.JsonRpc.Tests.WebApplication\Tochka.JsonRpc.Tests.WebApplication.csproj" />
     <ProjectReference Include="..\Tochka.JsonRpc.TestUtils\Tochka.JsonRpc.TestUtils.csproj" />
   </ItemGroup>
 
