--- a/src/tests/Tochka.JsonRpc.Server.Tests/Tochka.JsonRpc.Server.Tests.csproj
+++ b/src/tests/Tochka.JsonRpc.Server.Tests/Tochka.JsonRpc.Server.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
+    <PackageReference Include="Json.More.Net" Version="1.8.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NUnit" Version="3.13.3" />
