--- a/src/tests/Tochka.JsonRpc.TestUtils/Tochka.JsonRpc.TestUtils.csproj
+++ b/src/tests/Tochka.JsonRpc.TestUtils/Tochka.JsonRpc.TestUtils.csproj
@@ -8,4 +8,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
 </Project>
