test(v2): remove rubbish from coverage

--- a/src/tests/Tochka.JsonRpc.TestUtils/Tochka.JsonRpc.TestUtils.csproj
+++ b/src/tests/Tochka.JsonRpc.TestUtils/Tochka.JsonRpc.TestUtils.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
