--- a/src/tests/Tochka.JsonRpc.Tests.WebApplication/Tochka.JsonRpc.Tests.WebApplication.csproj
+++ b/src/tests/Tochka.JsonRpc.Tests.WebApplication/Tochka.JsonRpc.Tests.WebApplication.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Tochka.JsonRpc.Client.Tests.Integration</_Parameter1>
     </AssemblyAttribute>
