--- a/src/tests/Tochka.JsonRpc.TestUtils.Integration/Tochka.JsonRpc.TestUtils.Integration.csproj
+++ b/src/tests/Tochka.JsonRpc.TestUtils.Integration/Tochka.JsonRpc.TestUtils.Integration.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
   </ItemGroup>
