refactor: remove warnings

--- a/src/tests/Tochka.JsonRpc.Tests.TemplateRoutingApplication/Tochka.JsonRpc.Tests.TemplateRoutingApplication.csproj
+++ b/src/tests/Tochka.JsonRpc.Tests.TemplateRoutingApplication/Tochka.JsonRpc.Tests.TemplateRoutingApplication.csproj
@@ -8,6 +8,14 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NoWarn>1591</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Tochka.JsonRpc.Server.Tests.Integration.TemplateRouting</_Parameter1>
