--- a/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
+++ b/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
@@ -39,6 +39,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Macross.Json.Extensions" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
