--- a/src/tests/Tochka.JsonRpc.Tests.WebApplication/Tochka.JsonRpc.Tests.WebApplication.csproj
+++ b/src/tests/Tochka.JsonRpc.Tests.WebApplication/Tochka.JsonRpc.Tests.WebApplication.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -39,14 +39,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Tochka.JsonRpc.OpenRpc\Tochka.JsonRpc.OpenRpc.csproj" />
-    <ProjectReference Include="..\..\Tochka.JsonRpc.Server\Tochka.JsonRpc.Server.csproj" />
-    <ProjectReference Include="..\..\Tochka.JsonRpc.Swagger\Tochka.JsonRpc.Swagger.csproj" />
-    <ProjectReference Include="..\Tochka.JsonRpc.TestUtils.Integration\Tochka.JsonRpc.TestUtils.Integration.csproj" />
+    <ProjectReference Include="..\..\Tochka.JsonRpc.OpenRpc\Tochka.JsonRpc.OpenRpc.csproj"/>
+    <ProjectReference Include="..\..\Tochka.JsonRpc.Server\Tochka.JsonRpc.Server.csproj"/>
+    <ProjectReference Include="..\..\Tochka.JsonRpc.Swagger\Tochka.JsonRpc.Swagger.csproj"/>
+    <ProjectReference Include="..\Tochka.JsonRpc.TestUtils.Integration\Tochka.JsonRpc.TestUtils.Integration.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="FluentValidation" Version="11.8.1"/>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
   </ItemGroup>
 
 </Project>
