--- a/src/benchmarks/Tochka.JsonRpc.Benchmarks/Tochka.JsonRpc.Benchmarks.csproj
+++ b/src/benchmarks/Tochka.JsonRpc.Benchmarks/Tochka.JsonRpc.Benchmarks.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.12" />
     <PackageReference Include="EdjCase.JsonRpc.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.7" />
-    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Moq" Version="[4.18.4]" />
     <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
   </ItemGroup>
 
