--- a/src/tests/Tochka.JsonRpc.Server.Tests/Tochka.JsonRpc.Server.Tests.csproj
+++ b/src/tests/Tochka.JsonRpc.Server.Tests/Tochka.JsonRpc.Server.Tests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Json.More.Net" Version="2.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Moq" Version="[4.18.4]" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
