--- a/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
+++ b/src/Tochka.JsonRpc.Common/Tochka.JsonRpc.Common.csproj
@@ -41,4 +41,8 @@
     <PackageReference Include="Macross.Json.Extensions" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="PublicAPI.Unshipped.txt" />
+  </ItemGroup>
+
 </Project>
